# tyl-ollama-embedding-adapter

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs
src/: lib.rs
tests/: integration_tests.rs
