[package]
name = "tyl-ollama-embedding-adapter"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-ollama-embedding-adapter"
description = "Ollama embedding adapter for TYL framework with batch processing and content-type optimization"
homepage = "https://github.com/the-yaml-life/tyl-ollama-embedding-adapter"
documentation = "https://docs.rs/tyl-ollama-embedding-adapter"
readme = "README.md"
keywords = ["ollama", "embeddings", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["development-tools", "rust-patterns", "web-programming"]

[dependencies]
# Core TYL Framework modules
tyl-embeddings-port = { git = "https://github.com/the-yaml-life/tyl-embeddings-port.git", branch = "main" }
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors.git", branch = "main" }
tyl-config = { git = "https://github.com/the-yaml-life/tyl-config.git", branch = "main" }
tyl-logging = { git = "https://github.com/the-yaml-life/tyl-logging.git", branch = "main" }
tyl-tracing = { git = "https://github.com/the-yaml-life/tyl-tracing.git", branch = "main" }

# Required runtime dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Development dependencies for testing
tokio-test = "0.4"